--- a/main/tests/test12/plmext/src/android/AndroidManifest.xml
+++ b/main/tests/test12/plmext/src/android/AndroidManifest.xml
@@ -1,25 +1,41 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="{{android.package}}"
-    android:versionCode="{{android.version_code}}"
-    android:versionName="{{project.version}}"
-    android:installLocation="auto">
+        package="{{android.package}}"
+        android:versionCode="{{android.version_code}}"
+        android:versionName="{{project.version}}"
+        android:installLocation="auto">
 
     <uses-feature android:required="true" android:glEsVersion="0x00020000" />
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="19" />
-
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="26" />
     <application
         {{#has-icons?}}
         android:icon="@drawable/icon"
         {{/has-icons?}}
-        android:label="{{project.title}}" android:hasCode="true" android:debuggable="false">
+        android:label="{{project.title}}" android:hasCode="true" android:debuggable="false"
+        android:name="android.support.multidex.MultiDexApplication">
+
+        <!-- For Local Notifications -->
+        <receiver android:name="com.defold.push.LocalNotificationReceiver" >
+        </receiver>
+
+        <!-- For GCM (push) -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <!-- For Facebook -->
+        <meta-data android:name="com.facebook.sdk.ApplicationName"
+            android:value="{{project.title}}" />
 
         <activity android:name="com.dynamo.android.DefoldActivity"
-            android:label="{{project.title}}"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:screenOrientation="{{orientation-support}}"
-            android:launchMode="singleTask">
-            <meta-data android:name="android.app.lib_name" android:value="{{exe-name}}" />
+                android:label="{{project.title}}"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                android:screenOrientation="{{orientation-support}}"
+                android:launchMode="singleTask">
+            <meta-data android:name="android.app.lib_name"
+                    android:value="{{exe-name}}" />
             {{#android.push_field_title}}
             <meta-data
                 android:name="com.defold.push.field_title"
@@ -30,13 +46,82 @@
                 android:name="com.defold.push.field_text"
                 android:value="{{android.push_field_text}}" />
             {{/android.push_field_text}}
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+        <activity android:name="com.dynamo.android.DispatcherActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name="com.facebook.FacebookActivity"
+          android:theme="@android:style/Theme.Translucent.NoTitleBar"
+          android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+          android:label="{{project.title}}" />
+        <activity android:name="com.defold.iap.IapGooglePlayActivity"
+          android:theme="@android:style/Theme.Translucent.NoTitleBar"
+          android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+          android:label="IAP">
+        </activity>
+
+        <!-- For Local Notifications -->
+        <activity android:name="com.defold.push.LocalPushDispatchActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:launchMode="singleTask"
+            android:configChanges="keyboardHidden|orientation|screenSize">
+            <intent-filter>
+                <action android:name="com.defold.push.FORWARD" />
+                <category android:name="com.defold.push" />
+            </intent-filter>
+        </activity>
+
+        <!-- For GCM (push) -->
+        <activity android:name="com.defold.push.PushDispatchActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar">
+            <intent-filter>
+                <action android:name="com.defold.push.FORWARD" />
+                <category android:name="com.defold.push" />
+            </intent-filter>
+        </activity>
+        <receiver
+            android:name="com.defold.push.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.defold.push.FORWARD" />
+                <category android:name="com.defold.push" />
+            </intent-filter>
+        </receiver>
+
+        <!-- For IAC Invocations -->
+        <activity android:name="com.defold.iac.IACActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:launchMode="singleTask"
+            android:configChanges="keyboardHidden|orientation|screenSize">
+            <intent-filter>
+               <action android:name="android.intent.action.VIEW" />
+               <category android:name="android.intent.category.DEFAULT" />
+               <category android:name="android.intent.category.BROWSABLE" />
+               <data android:scheme="{{android.package}}" />
+            </intent-filter>
+        </activity>
+
+        <service android:name="com.defold.adtruth.InstallReceiver"/>
+        <receiver
+            android:name="com.defold.adtruth.InstallReceiver"
+            android:exported="true">
+          <intent-filter>
+            <action android:name="com.android.vending.INSTALL_REFERRER" />
+          </intent-filter>
+        </receiver>
+
+        <!-- For Amazon IAP -->
+        <receiver android:name="com.amazon.device.iap.ResponseReceiver" >
+            <intent-filter>
+                <action android:name="com.amazon.inapp.purchasing.NOTIFY" android:permission="com.amazon.inapp.purchasing.Permission.NOTIFY" />
+            </intent-filter>
+        </receiver>
+        <!-- gwj: For take photo -->
         <activity android:name="com.xishanju.plm.plmext.TakePhoto"
             android:label="takephoto"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
             android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -44,11 +129,9 @@
             </intent-filter>
         </activity>
     </application>
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.android.vending.BILLING" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -65,3 +148,4 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
 </manifest>
+<!-- END_INCLUDE(manifest) -->
