--- a/game.project
+++ b/game.project
@@ -22,12 +22,12 @@ shared_state = 1
 
 [android]
 app_icon_96x96 = /main/android/android_icon96.png
-package = org.evakwok.gwjtest
+package = org.evakwok.defold.gwjtest
 iap_provider = 
 manifest = /main/tests/test12/plmext/src/android/AndroidManifest.xml
 
 [ios]
-bundle_identifier = org.evakwok.gwjtest
+bundle_identifier = org.evakwok.defold.gwjtest
 
 [collection_proxy]
 max_count = 128
