--- a/game.project
+++ b/game.project
@@ -21,15 +21,16 @@ scale = 0.02
 shared_state = 1
 
 [android]
-app_icon_96x96 = /main/android/android_icon96.png
+app_icon_96x96 = /platform/android/android_icon96.png
 package = org.evakwok.defold.gwjtest
 iap_provider = 
 manifest = /cocosext/src/plmext/android/AndroidManifest.xml
 
 [ios]
 bundle_identifier = org.evakwok.defold.gwjtest
-app_icon_114x114 = /main/android/android_icon96.png
+app_icon_114x114 = /platform/android/android_icon96.png
 infoplist = /cocosext/src/plmext/ios/Info.plist
+launch_image_2436x1125 = /platform/ios/launch_2436x1125.png
 
 [collection_proxy]
 max_count = 128
