--- a/game.project
+++ b/game.project
@@ -28,7 +28,7 @@ iap_provider =
 manifest = /extension/plmext/src/android/AndroidManifest.xml
 
 [ios]
-bundle_identifier = org.evakwok.defold.gwjtest
+bundle_identifier = cn.com.xishanju.qyq
 app_icon_114x114 = /platform/android/android_icon96.png
 infoplist = /extension/plmext/src/ios/Info.plist
 launch_image_2436x1125 = /platform/ios/launch_2436x1125.png
