--- a/extension/plmext/src/android/AndroidManifest.xml
+++ b/extension/plmext/src/android/AndroidManifest.xml
@@ -130,11 +130,11 @@
         </activity>
         <!-- gwj: wechat callback activity -->
         <activity
-			android:name="cn.com.xishanju.qyq.wxapi.WXEntryActivity"
-			android:theme="@android:style/Theme.Translucent.NoTitleBar"
-			android:configChanges="keyboardHidden|orientation|screenSize"
-			android:exported="true"
-			android:launchMode="singleTop"/>
+            android:name="{{android.package}}.wxapi.WXEntryActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:launchMode="singleTop"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.android.vending.BILLING" />
