--- a/extension/plmext/src/android/AndroidManifest.xml
+++ b/extension/plmext/src/android/AndroidManifest.xml
@@ -12,7 +12,8 @@
         {{#has-icons?}}
         android:icon="@drawable/icon"
         {{/has-icons?}}
-        android:label="{{project.title}}" android:hasCode="true" android:debuggable="false"
+        android:label="@string/app_name"
+        android:hasCode="true" android:debuggable="false"
         android:name="android.support.multidex.MultiDexApplication">
 
         <!-- For Local Notifications -->
@@ -26,10 +27,9 @@
 
         <!-- For Facebook -->
         <meta-data android:name="com.facebook.sdk.ApplicationName"
-            android:value="{{project.title}}" />
+            android:value="@string/app_name" />
 
         <activity android:name="com.dynamo.android.DefoldActivity"
-                android:label="{{project.title}}"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                 android:screenOrientation="{{orientation-support}}"
@@ -55,7 +55,7 @@
         <activity android:name="com.facebook.FacebookActivity"
           android:theme="@android:style/Theme.Translucent.NoTitleBar"
           android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-          android:label="{{project.title}}" />
+          android:label="@string/app_name" />
         <activity android:name="com.defold.iap.IapGooglePlayActivity"
           android:theme="@android:style/Theme.Translucent.NoTitleBar"
           android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
