--- a/res/platform/android/AndroidManifest.xml
+++ b/res/platform/android/AndroidManifest.xml
@@ -12,7 +12,7 @@
         {{#has-icons?}}
         android:icon="@drawable/icon"
         {{/has-icons?}}
-        android:label="@string/app_name"
+        android:label="{{project.appname}}"
         android:hasCode="true" android:debuggable="false"
         android:name="android.support.multidex.MultiDexApplication">
 
@@ -27,7 +27,7 @@
 
         <!-- For Facebook -->
         <meta-data android:name="com.facebook.sdk.ApplicationName"
-            android:value="@string/app_name" />
+            android:value="{{project.appname}}" />
 
         <activity android:name="com.dynamo.android.DefoldActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
@@ -55,7 +55,7 @@
         <activity android:name="com.facebook.FacebookActivity"
           android:theme="@android:style/Theme.Translucent.NoTitleBar"
           android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-          android:label="@string/app_name" />
+          android:label="{{project.appname}}" />
         <activity android:name="com.defold.iap.IapGooglePlayActivity"
           android:theme="@android:style/Theme.Translucent.NoTitleBar"
           android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
