微信appid在一个地方定义，安卓和ios共用

--- a/res/platform/ios/Info.plist
+++ b/res/platform/ios/Info.plist
@@ -120,7 +120,7 @@
         			<string>wechat</string>
         			<key>CFBundleURLSchemes</key>
         			<array>
-        				<string>wxc0acf2068b5dd7a3</string>
+        				<string>wxefac673b77470b4f</string>
         			</array>
         		</dict>
         </array>
