--- a/game.project
+++ b/game.project
@@ -24,12 +24,12 @@ shared_state = 1
 
 [android]
 app_icon_96x96 = /res/platform/android/android_icon96.png
-package = cn.com.xishanju.qyq
+package = com.xsjplm.plm
 iap_provider = 
 manifest = /res/platform/android/AndroidManifest.xml
 
 [ios]
-bundle_identifier = cn.com.xishanju.qyq
+bundle_identifier = com.xsjplm.plm
 app_icon_114x114 = /res/platform/ios/ios_icon96.png
 infoplist = /res/platform/ios/Info.plist
 launch_image_2436x1125 = /res/platform/ios/launch_2436x1125.png
