--- a/res/platform/ios/Info.plist
+++ b/res/platform/ios/Info.plist
@@ -115,20 +115,31 @@
                 </dict>
                 <dict>
                     <key>CFBundleTypeRole</key>
-        			<string>Editor</string>
-        			<key>CFBundleURLName</key>
-        			<string>wechat</string>
-        			<key>CFBundleURLSchemes</key>
-        			<array>
-        				<string>wxefac673b77470b4f</string>
-        			</array>
-        		</dict>
+                    <string>Editor</string>
+                    <key>CFBundleURLName</key>
+                    <string>wechat</string>
+                    <key>CFBundleURLSchemes</key>
+                    <array>
+                        <string>wxefac673b77470b4f</string>
+                    </array>
+                </dict>
+                <dict>
+                    <key>CFBundleTypeRole</key>
+                    <string>Editor</string>
+                    <key>CFBundleURLName</key>
+                    <string>xianliao</string>
+                    <key>CFBundleURLSchemes</key>
+                    <array>
+                        <string>xianliaoRcy9A8UaRqA9Xg2w</string>
+                    </array>
+                </dict>
         </array>
 
         <key>LSApplicationQueriesSchemes</key>
         <array>
                 {{#application-queries-schemes}}<string>{{.}}</string>{{/application-queries-schemes}}
                 <string>wechat</string>
+                <string>xianliao</string>
         </array>
 
         <key>NSAppTransportSecurity</key>
