--- a/bindings-generator/targets/lua/conversions.yaml
+++ b/bindings-generator/targets/lua/conversions.yaml
@@ -74,7 +74,7 @@ conversions:
     "MeshVertexAttrib": "ok &= luaval_to_mesh_vertex_attrib(tolua_S, ${arg_idx}, &${out_value}, \"${lua_namespaced_class_name}:${func_name}\")"
     "@vector<float.*>": "ok &= luaval_to_std_vector_float(tolua_S, ${arg_idx}, &${out_value}, \"${lua_namespaced_class_name}:${func_name}\")"
     "@vector<unsigned short.*>": "ok &= luaval_to_std_vector_ushort(tolua_S, ${arg_idx}, &${out_value}, \"${lua_namespaced_class_name}:${func_name}\")"
-    "LUA_FUNCTION": "${out_value} = toluafix_ref_function(tolua_S, ${arg_idx}, 0); ok &= ${out_value} >= 0"
+    "LUA_FUNCTION": "${out_value} = ext_registerLuaCallback(tolua_S, ${arg_idx}); ok &= ${out_value} >= 0"
 
     object: "ok &= luaval_to_object<${arg.to_string($generator).replace(\"*\", \"\")}>(tolua_S, ${arg_idx}, \"${scriptname}\",&${out_value})"
   from_native:
