安装apk:防止崩溃

--- a/res/platform/android/AndroidManifest.xml
+++ b/res/platform/android/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:installLocation="auto">
 
     <uses-feature android:required="true" android:glEsVersion="0x00020000" />
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="26" />
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="21" />
     <application
         {{#has-icons?}}
         android:icon="@drawable/icon"
@@ -142,6 +142,18 @@
             android:launchMode="singleTop"/>
         <!-- for xianliao callback -->
         <activity android:name=".sgapi.SGEntryActivity" android:exported="true"/>
+	<!--
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="{{android.package}}.fileprovider"
+            android:grantUriPermissions="true"
+            android:exported="false"
+            >
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+	-->
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.android.vending.BILLING" />
