--- a/res/platform/android/AndroidManifest.xml
+++ b/res/platform/android/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:installLocation="auto">
 
     <uses-feature android:required="true" android:glEsVersion="0x00020000" />
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="21" />
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="26" />
     <application
         {{#has-icons?}}
         android:icon="@drawable/icon"
@@ -147,18 +147,15 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:launchMode="singleTask"/>
-	<!--
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="{{android.package}}.fileprovider"
+            android:authorities="{{android.package}}.fileProvider"
             android:grantUriPermissions="true"
-            android:exported="false"
-            >
+            android:exported="false">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-	-->
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.android.vending.BILLING" />
@@ -195,5 +192,7 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <!-- for install apk -->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
 </manifest>
 <!-- END_INCLUDE(manifest) -->
