bundle resource的设置改成跟plm一样

--- a/game.project
+++ b/game.project
@@ -1,7 +1,7 @@
 [project]
 title = gwjtest
 version = 0.1
-bundle_resources = /bundle_res
+bundle_resources = /res/bundle_resource/
 appname = defoldtest
 
 [bootstrap]
