--- a/game.project
+++ b/game.project
@@ -3,6 +3,7 @@ title = gwjtest
 version = 0.1
 bundle_resources = /res/bundle_resource/
 appname = defoldtest
+environment = development
 
 [bootstrap]
 main_collection = /main/main.collectionc
