--- a/liveupdate.settings
+++ b/liveupdate.settings
@@ -1,6 +1,6 @@
 [liveupdate]
 mode = Zip
-zip-filepath = C:\Users\evakwok\Desktop\liveupdate
+zip-filepath = C:\Users\evakwok\Desktop\liveupdate\gwjtest
 publickey = D:\defold\keys\liveupdate_manifest\public.der
 privatekey = D:\defold\keys\liveupdate_manifest\private.der
 
